# joke

./: Dockerfile  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: main.py
src/joke_app/: main.py
src/joke_app/schemas/: joke.py
src/joke_app/services/: joke.py
src/joke_app/static/: script.js  style.css
src/joke_app/templates/: base.html  joke.html
