[project]
name = "python-joke-api-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.black]
line-length = 100
indent-width = 4

[tool.ruff]
line-length = 100
ignore = [
  "E501",  # line too long, handled by black
]

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
